# Monopoly

./: CMakeLists.txt  LICENSE  README.md
doc/: UserManual.txt
include/: Monopoly.h
include/Exception/: NoHouseException.h  NoMoneyException.h  NoPropertyException.h  PropertyIsAlreadyMortgageException.h  PropertyIsNotMortgagedException.h
include/GameBoard/: Colour.h  HousesPrice.h  Mortgage.h  NonUpgradableProperty.h  Parking.h  Property.h  RailRoad.h  Tax.h  Tile.h  UpgradableProperty.h  UtilityProperty.h  Xorti.h
include/GameMechanics/: Bankruptcy.h  Dice.h  FillBoard.h  Game.h  Move.h  Trade.h
include/Player/: Money.h  Participant.h
include/Util/: MenuHelper.h  ReadInput.h
resources/: UserManual.txt
src/: Main.cpp  Monopoly.cpp  Monopoly.h
src/Exception/: HouseIsAlreadyMortgageException.h  HouseIsMortgageException.h  NoHouseException.cpp  NoHouseException.h  NoHousesException.cpp  NoHousesException.h  NoMoneyException.cpp  NoMoneyException.h  NoPropertyException.cpp  NoPropertyException.h  PropertyIsAlreadyMortgageException.h
src/GUI/: MainWindow.cpp  MainWindow.h
src/GameBoard/: Colour.cpp  Colours.h  CornerTiles.h  EmptyTile.h  Go.cpp  Go.h  Houses.cpp  Houses.h  HousesPrice.cpp  HousesPrice.h  Mortgage.cpp  Mortgage.h  NonUpgradableProperty.cpp  NonUpgradableProperty.h  Parking.cpp  Parking.h  Property.cpp  Property.h  RailRoad.cpp  RailRoad.h  SpecialProperty.cpp  SpecialProperty.h  Tax.cpp  Tax.h  Tile.cpp  Tile.h  UpgradableProperty.cpp  UpgradableProperty.h  UtilityProperty.cpp  UtilityProperty.h  Xorti.cpp  Xorti.h
src/GameMechanics/: Bankruptcy.cpp  Bankruptcy.h  Dice.cpp  Dice.h  FillBoard.cpp  FillBoard.h  Game.cpp  Game.h  Move.cpp  Move.h  SellingBuilding.cpp  SellingBuilding.h  Trade.cpp  Trade.h
src/Player/: Money.cpp  Money.h  Participant.cpp  Participant.h
src/Util/: MenuHelper.cpp  MenuHelper.h  ReadInput.cpp  ReadInput.h
src/forms/: mainwindow.ui
